Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28317

Assertion failures in row_undo_mod upon restoring backup

    XMLWordPrintable

Details

    Description

      10.7 e87c710dfc

      #2  0x00007f9d6ecc83fa in __assert_fail_base (fmt=0x7f9d6ee4f6c0 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", 
          assertion=assertion@entry=0x557f49908bc0 "node->table->is_temporary() || lock_table_has_locks(node->table)", 
          file=file@entry=0x557f499082d8 "/home/mariadb/node_table_is/10.7/storage/innobase/row/row0umod.cc", line=line@entry=1341, 
          function=function@entry=0x557f4990aa60 <row_undo_mod(undo_node_t*, que_thr_t*)::__PRETTY_FUNCTION__> "dberr_t row_undo_mod(undo_node_t*, que_thr_t*)") at assert.c:92
      #3  0x00007f9d6ecc8472 in __GI___assert_fail (assertion=0x557f49908bc0 "node->table->is_temporary() || lock_table_has_locks(node->table)", 
          file=0x557f499082d8 "/home/mariadb/node_table_is/10.7/storage/innobase/row/row0umod.cc", line=1341, 
          function=0x557f4990aa60 <row_undo_mod(undo_node_t*, que_thr_t*)::__PRETTY_FUNCTION__> "dberr_t row_undo_mod(undo_node_t*, que_thr_t*)") at assert.c:101
      #4  0x0000557f491a0c0f in row_undo_mod (node=0x4af00c001918, thr=0x4af00c001728) at /home/mariadb/node_table_is/10.7/storage/innobase/row/row0umod.cc:1341
      #5  0x0000557f48faeb29 in row_undo (node=0x4af00c001918, thr=0x4af00c001728) at /home/mariadb/node_table_is/10.7/storage/innobase/row/row0undo.cc:413
      #6  0x0000557f48faed4d in row_undo_step (thr=0x4af00c001728) at /home/mariadb/node_table_is/10.7/storage/innobase/row/row0undo.cc:460
      #7  0x0000557f48ef76d4 in que_thr_step (thr=0x4af00c001728) at /home/mariadb/node_table_is/10.7/storage/innobase/que/que0que.cc:651
      #8  0x0000557f48ef7964 in que_run_threads_low (thr=0x4af00c001728) at /home/mariadb/node_table_is/10.7/storage/innobase/que/que0que.cc:709
      #9  0x0000557f48ef7a78 in que_run_threads (thr=0x4af00c001728) at /home/mariadb/node_table_is/10.7/storage/innobase/que/que0que.cc:729
      #10 0x0000557f48ffe841 in trx_rollback_active (trx=0xbf8145a4390) at /home/mariadb/node_table_is/10.7/storage/innobase/trx/trx0roll.cc:602
      #11 0x0000557f48fff084 in trx_rollback_recovered (all=true) at /home/mariadb/node_table_is/10.7/storage/innobase/trx/trx0roll.cc:740
      #12 0x0000557f48fff37c in trx_rollback_all_recovered () at /home/mariadb/node_table_is/10.7/storage/innobase/trx/trx0roll.cc:786
      #13 0x0000557f491b34be in tpool::task_group::execute (this=0x557f4abb2d80 <rollback_all_recovered_group>, t=0x557f4abb2e20 <rollback_all_recovered_task>)
          at /home/mariadb/node_table_is/10.7/tpool/task_group.cc:55
      #14 0x0000557f491b383a in tpool::task::execute (this=0x557f4abb2e20 <rollback_all_recovered_task>) at /home/mariadb/node_table_is/10.7/tpool/task.cc:32
      #15 0x0000557f491acdfc in tpool::thread_pool_generic::worker_main (this=0x557f4b3d7fa0, thread_var=0x557f4b487030) at /home/mariadb/node_table_is/10.7/tpool/tpool_generic.cc:588
      #16 0x0000557f491b059f in std::__invoke_impl<void, void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> (__f=
          @0x7ffdf4002228: (void (tpool::thread_pool_generic::*)(tpool::thread_pool_generic * const, tpool::worker_data *)) 0x557f491acd64 <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>, __t=@0x7ffdf4002220: 0x557f4b3d7fa0) at /usr/include/c++/7/bits/invoke.h:73
      #17 0x0000557f491af739 in std::__invoke<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> (__fn=
          @0x7ffdf4002228: (void (tpool::thread_pool_generic::*)(tpool::thread_pool_generic * const, tpool::worker_data *)) 0x557f491acd64 <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>) at /usr/include/c++/7/bits/invoke.h:95
      #18 0x0000557f491b3193 in std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> >::_M_invoke<0ul, 1ul, 2ul> (this=0x7ffdf4002218) at /usr/include/c++/7/thread:234
      #19 0x0000557f491b312d in std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> >::operator() (
          this=0x7ffdf4002218) at /usr/include/c++/7/thread:243
      #20 0x0000557f491b310c in std::thread::_State_impl<std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> > >::_M_run (this=0x7ffdf4002210) at /usr/include/c++/7/thread:186
      #21 0x00007ffdf02cb6df in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #22 0x00007ffdefff46db in start_thread (arg=0x24a57c4e2700) at pthread_create.c:463
      #23 0x00007f9d6edb961f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.4 3327bb6098

      #2  0x000032b9322683fa in __assert_fail_base (fmt=0x32b9323ef6c0 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", 
          assertion=assertion@entry=0x5650e10ed860 "lock_table_has_locks(index->table)", file=file@entry=0x5650e10ed4a8 "/home/mariadb/node_table_is/10.4/storage/innobase/row/row0umod.cc", 
          line=line@entry=284, 
          function=function@entry=0x5650e10eea20 <row_undo_mod_clust(undo_node_t*, que_thr_t*)::__PRETTY_FUNCTION__> "dberr_t row_undo_mod_clust(undo_node_t*, que_thr_t*)") at assert.c:92
      #3  0x000032b932268472 in __GI___assert_fail (assertion=0x5650e10ed860 "lock_table_has_locks(index->table)", 
          file=0x5650e10ed4a8 "/home/mariadb/node_table_is/10.4/storage/innobase/row/row0umod.cc", line=284, 
          function=0x5650e10eea20 <row_undo_mod_clust(undo_node_t*, que_thr_t*)::__PRETTY_FUNCTION__> "dberr_t row_undo_mod_clust(undo_node_t*, que_thr_t*)") at assert.c:101
      #4  0x00005650e0a73875 in row_undo_mod_clust (node=0x7f2454001ad0, thr=0x7f2454001900) at /home/mariadb/node_table_is/10.4/storage/innobase/row/row0umod.cc:284
      #5  0x00005650e0a77634 in row_undo_mod (node=0x7f2454001ad0, thr=0x7f2454001900) at /home/mariadb/node_table_is/10.4/storage/innobase/row/row0umod.cc:1397
      #6  0x00005650e082eb53 in row_undo (node=0x7f2454001ad0, thr=0x7f2454001900) at /home/mariadb/node_table_is/10.4/storage/innobase/row/row0undo.cc:431
      #7  0x00005650e082ee11 in row_undo_step (thr=0x7f2454001900) at /home/mariadb/node_table_is/10.4/storage/innobase/row/row0undo.cc:489
      #8  0x00005650e076b5ee in que_thr_step (thr=0x7f2454001900) at /home/mariadb/node_table_is/10.4/storage/innobase/que/que0que.cc:1036
      #9  0x00005650e076b8a1 in que_run_threads_low (thr=0x7f2454001900) at /home/mariadb/node_table_is/10.4/storage/innobase/que/que0que.cc:1100
      #10 0x00005650e076baef in que_run_threads (thr=0x7f2454001900) at /home/mariadb/node_table_is/10.4/storage/innobase/que/que0que.cc:1140
      #11 0x00005650e0897682 in trx_rollback_active (trx=0x5650e27f7118) at /home/mariadb/node_table_is/10.4/storage/innobase/trx/trx0roll.cc:648
      #12 0x00005650e0897f96 in trx_rollback_recovered (all=true) at /home/mariadb/node_table_is/10.4/storage/innobase/trx/trx0roll.cc:805
      #13 0x00005650e08982df in trx_rollback_all_recovered () at /home/mariadb/node_table_is/10.4/storage/innobase/trx/trx0roll.cc:860
      #14 0x00002aec6b2036db in start_thread (arg=0x56f84b06e700) at pthread_create.c:463
      #15 0x000032b93235961f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      rr profiles are available.

      The failures are currently fairly well reproducible with a concurrent test:

      git clone https://github.com/MariaDB/randgen --branch mdev28317 rqg-mdev28317
      cd rqg-mdev28317
      . ./mdev28317.cmd <basedir>
      

      Couldn't reproduce on 10.2.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5h
                  5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.